force-app/main/default/objects/BV_Case__c/fields/Open_closed__c.field-meta.xml
<CustomField>
    <fullName>Open_closed__c</fullName>
    <label>Open / closed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>