force-app/main/default/objects/BV_Case__c/fields/Original_Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Category__c</fullName>
    <label>Original Case Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>