force-app/main/default/objects/BV_Case__c/fields/Paper_1__c.field-meta.xml
<CustomField>
    <fullName>Paper_1__c</fullName>
    <label>Paper 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>