force-app/main/default/objects/BV_Case__c/fields/Paper_4__c.field-meta.xml
<CustomField>
    <fullName>Paper_4__c</fullName>
    <label>Paper 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>