force-app/main/default/objects/BV_Case__c/fields/Paper_Ads_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Paper_Ads_Submitted__c</fullName>
    <label>Paper Ads Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>