force-app/main/default/objects/BV_Case__c/fields/Previous_1__c.field-meta.xml
<CustomField>
    <fullName>Previous_1__c</fullName>
    <label>Previous 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>