force-app/main/default/objects/BV_Case__c/fields/Previous_2__c.field-meta.xml
<CustomField>
    <fullName>Previous_2__c</fullName>
    <label>Previous 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>