force-app/main/default/objects/BV_Case__c/fields/Previous_4__c.field-meta.xml
<CustomField>
    <fullName>Previous_4__c</fullName>
    <label>Previous 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>