force-app/main/default/objects/BV_Case__c/fields/Property_Valuation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation_Request_Date__c</fullName>
    <label>Property Valuation Request Date</label>
    <type>Date</type>
</CustomField>