force-app/main/default/objects/BV_Case__c/fields/Put_Away__c.field-meta.xml
<CustomField>
    <fullName>Put_Away__c</fullName>
    <label>Put Away</label>
    <type>Date</type>
</CustomField>