force-app/main/default/objects/BV_Case__c/fields/Ready_for_Advertising__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Advertising__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Advertising?</label>
    <type>Checkbox</type>
</CustomField>