force-app/main/default/objects/BV_Case__c/fields/Referred_to_person__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_person__c</fullName>
    <label>Referred to</label>
    <length>128</length>
    <type>Text</type>
</CustomField>