force-app/main/default/objects/BV_Case__c/fields/Reopened_by__c.field-meta.xml
<CustomField>
    <fullName>Reopened_by__c</fullName>
    <label>Reopened by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>