force-app/main/default/objects/BV_Case__c/fields/Reply_required__c.field-meta.xml
<CustomField>
    <fullName>Reply_required__c</fullName>
    <label>Reply required</label>
    <type>Date</type>
</CustomField>