force-app/main/default/objects/BV_Case__c/fields/Report_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_to_Date__c</fullName>
    <label>Report to Date</label>
    <type>Date</type>
</CustomField>