force-app/main/default/objects/BV_Case__c/fields/Request_Statement_from_each_creditor__c.field-meta.xml
<CustomField>
    <fullName>Request_Statement_from_each_creditor__c</fullName>
    <label>Request Statement from each creditor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>