force-app/main/default/objects/BV_Case__c/fields/Sale_or_Auction_Referral_Pick__c.field-meta.xml
<CustomField>
    <fullName>Sale_or_Auction_Referral_Pick__c</fullName>
    <label>Sale or Auction Referral Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>