force-app/main/default/objects/BV_Case__c/fields/Solcase_Owner__c.field-meta.xml
<CustomField>
    <fullName>Solcase_Owner__c</fullName>
    <externalId>true</externalId>
    <label>Solcase Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>