force-app/main/default/objects/BV_Case__c/fields/Take_steps_to_terminate_tenancy__c.field-meta.xml
<CustomField>
    <fullName>Take_steps_to_terminate_tenancy__c</fullName>
    <label>Take steps to terminate tenancy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>