force-app/main/default/objects/BV_Case__c/fields/Total_cost_of_letters_etc_in__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_of_letters_etc_in__c</fullName>
    <label>Total cost of letters etc in £</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>