force-app/main/default/objects/BV_Case__c/fields/TOTAL_COSTS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_COSTS__c</fullName>
    <label>TOTAL COSTS £</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>