force-app/main/default/objects/BV_Case__c/recordTypes/MP_s_Letters.recordType-meta.xml
<RecordType>
    <fullName>MP_s_Letters</fullName>
    <active>true</active>
    <label>MP&apos;s Letters</label>
</RecordType>