force-app/main/default/objects/BV_Case__c/recordTypes/Pre_Admin_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Pre_Admin_Checklist</fullName>
    <active>true</active>
    <label>Pre-Admin Checklist</label>
</RecordType>